[tool.poetry]
name = "voxbeat"
version = "0.1.0"
description = ""
authors = ["John Walz <johnwalz97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
librosa = "^0.10.0.post2"
jupyter = "^1.0.0"
pyaudio = "^0.2.13"
mido = "^1.2.10"
matplotlib = "^3.7.1"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
